[metadata]
name = python_linkplay
description = Python library to control LinkPlay devices
author = Velleman Group nv
version = 0.0.0

[options]
packages = find_namespace:
install_requires =
    async-timeout==4.0.3
    aiohttp==3.9.1
    async_upnp_client==0.38.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
linkplay = py.typed

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.1.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.23.3
    mypy>=1.3.0
    flake8>=6.0.0
    tox>=4.6.0
    typing-extensions>=4.6.3

[flake8]
max-line-length = 160