[metadata]
name = python_linkplay
description = A Python Library for Seamless LinkPlay Device Control
long_description = file: README.md
long_description_content_type = text/markdown
author = Velleman Group nv
version = attr: linkplay.VERSION
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
install_requires =
    async-timeout>=4.0.3
    aiohttp>=3.8.5
    appdirs>=1.4.4
    async_upnp_client>=0.36.2
    deprecated>=1.2.14
    aiofiles>=24.1.0
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
linkplay = py.typed

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.1.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.23.3
    mypy>=1.3.0
    ruff>=0.5.4
    tox>=4.6.0
    typing-extensions>=4.6.3
    pre-commit>=3.8.0